Fix some paragraph spacing.

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -31,6 +31,7 @@
 .u-ml\:1\.5r { margin-left: 1.5rem; }
 .u-mr\:0\.25r { margin-right: 0.25rem; }
 .u-mr\:0\.5r { margin-right: 0.5rem; }
+.u-mt\:0\.25r { margin-top: 0.25rem; }
 .u-mt\:0\.5r { margin-top: 0.5rem; }
 .u-mt\:1\.5r { margin-top: 1.5rem; }
 .u-mt\:1r { margin-top: 1rem; }
